@@ -20,6 +20,14 @@ CHANGES
 - sql
     - the __selectable__() interface has been replaced entirely
       by __clause_element__().
+
+    - The per-dialect cache used by TypeEngine to cache
+      dialect-specific types is now a WeakKeyDictionary.
+      This to prevent dialect objects from 
+      being referenced forever for an application that 
+      creates an arbitrarily large number of engines
+      or dialects.   There is a small performance penalty
+      which will be resolved in 0.6.  [ticket:1299]
       
 0.5.2
 ======
